--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "hardhat": "^2.12.2"
   },
   "dependencies": {
-    "dotenv": "^16.0.3"
+    "@openzeppelin/cli": "^2.8.2",
+    "@openzeppelin/contracts": "^4.8.0",
+    "dotenv": "^16.0.3",
+    "openzeppelin-solidity": "^4.6.0"
   }
 }
